--- a/templates/views/faculty.hbs
+++ b/templates/views/faculty.hbs
@@ -61,7 +61,7 @@ div.container {
 <h1>Faculty Preference</h1>
 
 <div class="container">
-  <form>
+  <form action="/">
     <label for="coursecode">Course Code</label>
      <span class="required">*</span>
     <input type="text" id="coursecode" name="coursecode" placeholder="Enter course code.." required>
