--- a/templates/views/tadetails.hbs
+++ b/templates/views/tadetails.hbs
@@ -45,7 +45,7 @@ div.container {
 }
 </style>
 <head>
-    <title>Add courses</title>
+    <title>TA Preference</title>
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
       rel="stylesheet"
@@ -57,7 +57,7 @@ div.container {
 <h1>TA Preferences</h1>
 
 <div class="container">
-  <form action="">
+  <form action="/">
     <label for="rollNumber">TA Roll Number</label>
     <span class="required">*</span>
     <input type="text" id="rollNumber" name="rollNumber" placeholder="Enter your rollnumber.." required>
