--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,8 @@ hr {
     border-style: dotted none none;
     border-color: grey;
     border-width: 5px;
-    width: 5%;
+    width: 7%;
+    /* margin: 5px; */
 }
 
 .main-content {
@@ -92,6 +93,62 @@ button {
   }
   
   .btn:hover {
+    background: #3cb0fd;
+    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+    text-decoration: none;
+  } 
+
+.btn2 {
+    background: #7d7d7d;
+    background-image: -webkit-linear-gradient(top, #7d7d7d, #a2a8ab);
+    background-image: -moz-linear-gradient(top, #7d7d7d, #a2a8ab);
+    background-image: -ms-linear-gradient(top, #7d7d7d, #a2a8ab);
+    background-image: -o-linear-gradient(top, #7d7d7d, #a2a8ab);
+    background-image: linear-gradient(to bottom, #7d7d7d, #a2a8ab);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 16px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+    margin: 16px auto 16px 100px;
+  }
+  
+  .btn2:hover {
+    background: #3cb0fd;
+    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+    text-decoration: none;
+  } 
+
+.btn3 {
+    background: #7d7d7d;
+    background-image: -webkit-linear-gradient(top, #7d7d7d, #a2a8ab);
+    background-image: -moz-linear-gradient(top, #7d7d7d, #a2a8ab);
+    background-image: -ms-linear-gradient(top, #7d7d7d, #a2a8ab);
+    background-image: -o-linear-gradient(top, #7d7d7d, #a2a8ab);
+    background-image: linear-gradient(to bottom, #7d7d7d, #a2a8ab);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 16px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+    margin: 16px auto 16px 100px;
+  }
+  
+  .btn3:hover {
     background: #3cb0fd;
     background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
     background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
