--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-    <title>Simple landing page</title>
+    <title>TA Allotment System</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -67,19 +67,17 @@
                 <a class="nav-link" href="#features-section">About</a>
               </li>
               <li class="nav-item text-center">
-                <a class="nav-link" href="/sign-ta" style="width : 100px;">Login
-                  as Student</a>
+                <a class="nav-link" href="/tapage" style="width : 100px;">TA Preferences</a>
               </li>
               <li class="nav-item text-center">
-                <a class="nav-link" href="/sign-prof" style="width : 100px;">Login
-                  as Professor</a>
+                <a class="nav-link" href="/profpage" style="width : 100px;">Professor Preferences</a>
               </li>
               <li class="nav-itme text-center">
                 <a
                   class="nav-link"
-                  href="/sign-admin"
+                  href="/admin"
                   style="width : 100px;"
-                >Login as Admin</a>
+                >Admin</a>
               </li>
 
               {{! <li class="nav-item btn-contact-us pl-4 pl-lg-0">
