--- a/templates/views/tadetails.hbs
+++ b/templates/views/tadetails.hbs
@@ -80,7 +80,7 @@ div.container {
 
     <label for="password">Password</label>
     <span class="required">*</span>
-    <input type="text" id="password" name="password" placeholder="Entern password.." required>
+    <input type="text" id="password" name="password" placeholder="Enter your password.." required>
 
     {{!-- <label for="expert1">expert1</label>
     <input type="text" id="expert1" name="expert1" placeholder="Enter course code of your expertise" required>
