--- a/templates/views/deleteta.hbs
+++ b/templates/views/deleteta.hbs
@@ -60,7 +60,12 @@ div.container {
 <div class="container">
   <form action="/">
     <label for="fname">TA Roll Number</label>
-    <input type="text" id="rollNumber" name="rollNumber" placeholder="Enter roll number.." required>
+    <span class="required">*</span>
+    <input type="text" id="id" name="id" placeholder="Enter roll number.." required>
+
+    <label for="fname">Password</label>
+    <span class="required">*</span>
+    <input type="text" id="password" name="password" placeholder="Enter password.." required>
     <input type="submit" value="Submit">
   </form>
 </div>
