--- a/templates/views/dropdata.hbs
+++ b/templates/views/dropdata.hbs
@@ -54,20 +54,20 @@
 </style>
 
 <head>
-  <title>Delete courses</title>
+  <title>Delete Database</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
 
-  <h1>Drop course</h1>
+  <h1>Drop Database</h1>
 
   <div class="container">
     <form action="/">
-      <label for="fname">Course Code</label>
+      <label for="fname">Id</label>
       <span class="required">*</span>
-      <input type="text" id="id" name="id" placeholder="Enter course code.." required>
+      <input type="text" id="id" name="id" placeholder="Enter admin Id.." required>
       <label for="fname">Password</label>
       <span class="required">*</span>
       <input type="text" id="password" name="password" placeholder="Enter Password.." required>
@@ -75,7 +75,7 @@
     </form>
   </div>
   {{>footer}}
-  <script src="/js/deletecourse.js"></script>
+  <script src="/js/dropdata.js"></script>
 
 </body>
 
