--- a/templates/views/faculty.hbs
+++ b/templates/views/faculty.hbs
@@ -99,7 +99,7 @@ div.container {
 
     <label for="password">Password</label>
      <span class="required">*</span>
-    <input type="text" id="password" name="password" placeholder="Enter course type.." required>
+    <input type="text" id="password" name="password" placeholder="Enter password.." required>
 
 
     
