--- a/templates/views/admin.hbs
+++ b/templates/views/admin.hbs
@@ -30,7 +30,7 @@
           <button class="btn btn-opacity-light ml-1" onclick="location.href='/showdata';">Show Database</button>
   
         </div>
-        <img src="img/Group171.svg" alt="" class="img-fluid" />
+        <img src="img/login-admin.svg" alt="" class="img-fluid" style="width: 500px;" />
       </div>
     </div>
 
