--- a/templates/views/profpage.hbs
+++ b/templates/views/profpage.hbs
@@ -31,7 +31,7 @@
   
           <button class="btn btn-opacity-success ml-1" onclick="location.href='/deletecourse';">Delete Preference</button>
         </div>
-        <img src="img/Group171.svg" alt="" class="img-fluid" />
+        <img src="img/login-prof.svg" alt="" class="img-fluid" style="width: 500px" />
       </div>
     </div>
 
